# GraphTravelAssistant

./: README.md  docker-compose.yaml  main.py  pyproject.toml
app/: app.py  brains.py  test.py
app/api/: routes.py  schemas.py
app/core/: config.py  core.txt
app/graph/: neo4j_client.py
app/ingestion/: chunker.py  embedding_generator.py  firecrawl_loader.py  graph_transformer.py  neo4j_client.py  pipeline.py  sources.py
app/ingestion/prompts/: Travel_Graph_prompt.md
app/rag/: chat_cli.py  context_builder.py  entity_constants.py  graph_search.py  rag_pipeline.py  retriever.py  vector_search.py
app/retriever/: graph_retriever.py
frontend/: streamlit_app.py
