[project]
name = "travelaiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl>=4.31.0",
    "json-repair>=0.61.1",
    "langchain-cohere>=0.6.0",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "neo4j>=6.2.0",
    "python-dotenv>=1.2.2",
]
